# PsiCode

./: .gitignore  BENCHMARKS.md  RESEARCH.md  SPEC.md
.claude/agents/: opus-worker.md  sonnet-worker.md
.claude/rules/: 02-delegation.md
psicode-core/: Cargo.toml
psicode-core/examples/: demo.rs
psicode-core/src/: base32.rs  bits.rs  gf32.rs  lib.rs  profile.rs  rs.rs
